Buttons Done, GUI Changed.

--- a/TibiaXBot/TibiaXBot/Main.resx
+++ b/TibiaXBot/TibiaXBot/Main.resx
@@ -117,10 +117,220 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        Qk2mFwAAAAAAADYAAAAoAAAAUAAAABkAAAABABgAAAAAAAAAAAASCwAAEgsAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAAECAAECAAIDAAIEAAIEAAMFAAMGAAQHAAQH
+        AAQHAAUIAAUJAAYKAAYKAAcLAAcMAAgNAAgOAAgOAAkPAAkQAAkQAAoRAAoRAAoSAAoSAAsTAAsTAAsT
+        AAoSAAoSAAoRAAoRAAkQAAkQAAkPAAgOAAgOAAgNAAcMAAcLAAYKAAYKAAUJAAUIAAQHAAQHAAQHAAMG
+        AAMFAAIEAAIEAAIDAAECAAECAAEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDA0ODA0PDA4QDA8RDA8SDBAUDBEWCxIXCxMZCxQbCxYeCxcf
+        CxghCxkkCxomCxwoCx0qCx4tCh8uCiAwCiIzCiM1CiQ2CiU4CiY6Cic8Cic9Cig+Cik/CilACilACilA
+        Cik/Cig+Cic9Cic8CiY6CiU4CiQ2CiM1CiIzCiAwCh8uCx4tCx0qCxwoCxomCxkkCxghCxcfCxYeCxQb
+        CxMZCxIXDBEWDBAUDA8SDA8RDA4QDA0PDA0ODAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMAAAAAAAADw8P
+        DQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ4PDQ4QDQ8RDRATDREVDBMYDBQaDBYdDBggDBkjDBsmDB0qCx8u
+        CyExCyM1CyU4Cyc8Cyk/CitDCi1GCi9KCjFNCjNQCjVTCTZWCTdZCTlbCTpeCTxgCT1iCT1jCT1jCT1j
+        CT1iCTxgCTpeCTlbCTdZCTZWCjVTCjNQCjFNCi9KCi1GCitDCyk/Cyc8CyU4CyM1CyExCx8uDB0qDBsm
+        DBkjDBggDBYdDBQaDBMYDREVDRATDQ8RDQ4QDQ4PDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDw8PAAAAAAAAEhIS
+        ERERERERERERERERERERERERERESERITERMUERQWEBUZEBccEBkgEBsjDx0nDx8rDyIvDyU0Dic5Dik9
+        DixCDS9HDTJMDTRRDDdWDDpaDD1gCz9kC0JpC0RtCkdyCkh1Ckt5Ck19CU+ACVGECVKFCVOHCVOICVOH
+        CVKFCVGECU+ACk19Ckt5Ckl2CkdyC0RtC0JpCz9kDD1gDDpaDDdWDTRRDTJMDS9HDixCDik9Dic5DyU0
+        DyIwDyAsDx0nEBsjEBkgEBccEBYaERQXERMUERITERESEREREREREREREREREREREhISAAAAAAAAFRUV
+        FBQUFRUVFRUVFRUVFRUVFRUVFRUWFRYYGBsdGR8jHSUqIi00JDM9KTpHLkJQM0pbOVNmPltvRGN5Sm2E
+        UXWNV32WX4ahZY2obJWxdJ24e6O/g6rGirHMkbfRmL3Wn8LapcfdqsvhsdDkttPmvNbnv9nqw9vrv9nq
+        vNbnttPmsdDkq8vhpcfdn8LamL3WkbfRirHMg6rGe6O/dJ24bJWxZo2oXoWgV32XUXWNSm2ERGN5Pltv
+        OVNmM0pbLkJQKTpHJDM9ISwzHSUqGiAkGBsdFRYYFRUWFRUVFRUVFRUVFRUVFBQUFRUVAAAAAAAAGBgY
+        FxcXGBgYGBgYGBgYGBgYGBgYGBgZGBkbGh0fHSMnICguJC82JzU/KzxJL0RTNUxdOVRnPltwRGR6SWyE
+        T3SOVXyXW4OgYYuoZ5Kvbpm3dJ+9eqXDgKzJh7HOjLbSkbrWl7/ZncLcosfepsngq8zirs7jsdDkrs7j
+        qszipsrgocbencLcl7/ZkrvWjLbSh7HOgKzJeqXDdJ+9bpm3aJKvYYuoW4OgVXyXT3SOSWyERGR6P1xx
+        OVRnNUxdL0RTKzxJJzZAJC83ICguHSMnGx0gGBkbGBgZGBgYGBgYGBgYGBgYFxcXGBgYAAAAAAAAGRkZ
+        GRkZGhoaGhoaGhoaGhoaGhoaGhobGhscGhwdGR0fGR4hGSAlGCIoGCMrGCYwFyczFyo3Fiw8Fi5AFTFE
+        FTNJFDZOFDhSEztXEj1cEkBgEUJlEUVpEEduEElzD0x3D016D1B+DlGBDlOFDVWIDVaKDVeLDVeMDVeL
+        DVaKDVWIDlOFDlGBD1B+D057D0x3EElzEEduEUVpEUJlEkBgEj1cEztXFDhSFDZOFTNJFTFEFi5AFiw8
+        Fyo4Fyg0GCYwGCMrGCIoGSAlGR4iGR0gGhwdGhscGhobGhoaGhoaGhoaGhoaGRkZGRkZAAAAAAAAHBwc
+        HBwcHR0dHR0dHR0dHR0dHR0dHR0dHR4fHR4fHB8hHCAjHCEkHCInGyMpGyUsGyYvGigxGio1Gis4GS07
+        GS8+GDBCGDJFFzRIFzZLFzdPFjlSFjtVFTxYFT5bFUBeFEFhFEJjFENmE0VoE0ZqE0dsE0dtE0dtE0dt
+        E0dsE0ZqE0VoFENmFEJjFEFhFUBeFT5bFTxZFjtVFjlSFzdPFzZLFzRIGDJFGDBCGS8+GS07Gis4Gio1
+        GigxGyYvGyUsGyMpHCInHCEkHCAjHB8hHR4fHR4fHR0dHR0dHR0dHR0dHR0dHBwcHBwcAAAAAAAAHx8f
+        Hx8fHx8fICAgICAgICAgICAgICAgICAgICEiICEiICIjHyMlHyMmHyQnHyUpHiUqHiYsHicuHigwHSky
+        HSozHSs2HSw3HC06HC47HC89GzA/GzFBGzJDGzNFGjRHGjVIGjZKGjdLGjdMGThOGThPGTlPGTlPGTlP
+        GThPGThOGjdMGjdLGjZKGjVIGjRHGzNFGzJDGzFBGzA/HDA+HC47HC06HSw3HSs2HSozHSkyHigwHicu
+        HiYsHiUqHyUpHyQnHyMmHyMlICIjICEiICEiICAgICAgICAgICAgICAgHx8fHx8fHx8fAAAAAAAAISEh
+        ISEhISEhIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIjIiMkIiMkIiMkISQlISQlISQmISQnISUoISUo
+        ISUoISYpISYqIScrIScrICcsICcsICgtICgtICguICkvICkwICkwICkwICkwICoxICoxHyoyHyoyHyoy
+        ICoxICoxICkwICkwICkwICkwICkvICguICgtICgtICcsICcsIScrIScrISYqISYpISUoISUoISUoISQn
+        ISQmISQlISQlIiMkIiMkIiMkIiIjIiIiIiIiIiIiIiIiIiIiIiIiIiIiISEhISEhISEhAAAAAAAAJCQk
+        JCQkJCQkJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUl
+        JSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUl
+        JSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUl
+        JSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJCQkJCQkJCQkAAAAAAAAJycn
+        JycnJycnKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoJycnJycnJycnAAAAAAAAKSkp
+        KSkpKioqKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysr
+        KysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysr
+        KysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysr
+        KysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKioqKSkpKSkpAAAAAAAALCws
+        LCwsLS0tLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4u
+        Li4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4u
+        Li4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4u
+        Li4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLS0tLCwsLCwsAAAAAAAALi4u
+        Li4uLy8vMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
+        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
+        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
+        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwLy8vLi4uLi4uAAAAAAAAMTEx
+        MTExMjIyMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMz
+        MzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMz
+        MzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMz
+        MzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMjIyMTExMTExAAAAAAAAMzMz
+        MzMzNDQ0NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1
+        NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1
+        NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1
+        NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NDQ0MzMzMzMzAAAAAAAANjY2
+        NjY2Nzc3ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4
+        ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4
+        ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4
+        ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4Nzc3NjY2NjY2AAAAAAAAODg4
+        OTk5Ojo6Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7
+        Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7
+        Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7
+        Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ojo6OTk5ODg4AAAAAAAAOjo6
+        Ozs7PDw8PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
+        PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
+        PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
+        PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PDw8Ozs7Ojo6AAAAAAAAPj4+
+        QEBAQ0NDRERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
+        RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
+        RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
+        REREREREREREREREREREREREREREREREREREREREREREREREREREREREQ0NDQEBAPj4+AAAAAAAARkZG
+        SkpKTk5OT09PUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQ
+        UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQ
+        UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQ
+        UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQT09PTk5OSkpKRkZGAAAABwcHTk5O
+        UlJSVVVVV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dX
+        V1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dX
+        V1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dX
+        V1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXVVVVUlJSTk5OBwcHDw8PVlZW
+        WlpaXV1dX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19f
+        X19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19f
+        X19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19f
+        X19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fXV1dWlpaVlZWDw8PFxcXHh4e
+        IyMjJSUlJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycn
+        JycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycn
+        JycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycn
+        JycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJSUlIyMjHh4eFxcX
+</value>
+  </data>
   <metadata name="m_Menu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        Qk2mFwAAAAAAADYAAAAoAAAAUAAAABkAAAABABgAAAAAAAAAAAASCwAAEgsAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAAECAAECAAIDAAIEAAIEAAMFAAMGAAQHAAQH
+        AAQHAAUIAAUJAAYKAAYKAAcLAAcMAAgNAAgOAAgOAAkPAAkQAAkQAAoRAAoRAAoSAAoSAAsTAAsTAAsT
+        AAoSAAoSAAoRAAoRAAkQAAkQAAkPAAgOAAgOAAgNAAcMAAcLAAYKAAYKAAUJAAUIAAQHAAQHAAQHAAMG
+        AAMFAAIEAAIEAAIDAAECAAECAAEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDA0ODA0PDA4QDA8RDA8SDBAUDBEWCxIXCxMZCxQbCxYeCxcf
+        CxghCxkkCxomCxwoCx0qCx4tCh8uCiAwCiIzCiM1CiQ2CiU4CiY6Cic8Cic9Cig+Cik/CilACilACilA
+        Cik/Cig+Cic9Cic8CiY6CiU4CiQ2CiM1CiIzCiAwCh8uCx4tCx0qCxwoCxomCxkkCxghCxcfCxYeCxQb
+        CxMZCxIXDBEWDBAUDA8SDA8RDA4QDA0PDA0ODAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMAAAAAAAADw8P
+        DQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ4PDQ4QDQ8RDRATDREVDBMYDBQaDBYdDBggDBkjDBsmDB0qCx8u
+        CyExCyM1CyU4Cyc8Cyk/CitDCi1GCi9KCjFNCjNQCjVTCTZWCTdZCTlbCTpeCTxgCT1iCT1jCT1jCT1j
+        CT1iCTxgCTpeCTlbCTdZCTZWCjVTCjNQCjFNCi9KCi1GCitDCyk/Cyc8CyU4CyM1CyExCx8uDB0qDBsm
+        DBkjDBggDBYdDBQaDBMYDREVDRATDQ8RDQ4QDQ4PDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDw8PAAAAAAAAEhIS
+        ERERERERERERERERERERERERERESERITERMUERQWEBUZEBccEBkgEBsjDx0nDx8rDyIvDyU0Dic5Dik9
+        DixCDS9HDTJMDTRRDDdWDDpaDD1gCz9kC0JpC0RtCkdyCkh1Ckt5Ck19CU+ACVGECVKFCVOHCVOICVOH
+        CVKFCVGECU+ACk19Ckt5Ckl2CkdyC0RtC0JpCz9kDD1gDDpaDDdWDTRRDTJMDS9HDixCDik9Dic5DyU0
+        DyIwDyAsDx0nEBsjEBkgEBccEBYaERQXERMUERITERESEREREREREREREREREREREhISAAAAAAAAFRUV
+        FBQUFRUVFRUVFRUVFRUVFRUVFRUWFRYYGBsdGR8jHSUqIi00JDM9KTpHLkJQM0pbOVNmPltvRGN5Sm2E
+        UXWNV32WX4ahZY2obJWxdJ24e6O/g6rGirHMkbfRmL3Wn8LapcfdqsvhsdDkttPmvNbnv9nqw9vrv9nq
+        vNbnttPmsdDkq8vhpcfdn8LamL3WkbfRirHMg6rGe6O/dJ24bJWxZo2oXoWgV32XUXWNSm2ERGN5Pltv
+        OVNmM0pbLkJQKTpHJDM9ISwzHSUqGiAkGBsdFRYYFRUWFRUVFRUVFRUVFRUVFBQUFRUVAAAAAAAAGBgY
+        FxcXGBgYGBgYGBgYGBgYGBgYGBgZGBkbGh0fHSMnICguJC82JzU/KzxJL0RTNUxdOVRnPltwRGR6SWyE
+        T3SOVXyXW4OgYYuoZ5Kvbpm3dJ+9eqXDgKzJh7HOjLbSkbrWl7/ZncLcosfepsngq8zirs7jsdDkrs7j
+        qszipsrgocbencLcl7/ZkrvWjLbSh7HOgKzJeqXDdJ+9bpm3aJKvYYuoW4OgVXyXT3SOSWyERGR6P1xx
+        OVRnNUxdL0RTKzxJJzZAJC83ICguHSMnGx0gGBkbGBgZGBgYGBgYGBgYGBgYFxcXGBgYAAAAAAAAGRkZ
+        GRkZGhoaGhoaGhoaGhoaGhoaGhobGhscGhwdGR0fGR4hGSAlGCIoGCMrGCYwFyczFyo3Fiw8Fi5AFTFE
+        FTNJFDZOFDhSEztXEj1cEkBgEUJlEUVpEEduEElzD0x3D016D1B+DlGBDlOFDVWIDVaKDVeLDVeMDVeL
+        DVaKDVWIDlOFDlGBD1B+D057D0x3EElzEEduEUVpEUJlEkBgEj1cEztXFDhSFDZOFTNJFTFEFi5AFiw8
+        Fyo4Fyg0GCYwGCMrGCIoGSAlGR4iGR0gGhwdGhscGhobGhoaGhoaGhoaGhoaGRkZGRkZAAAAAAAAHBwc
+        HBwcHR0dHR0dHR0dHR0dHR0dHR0dHR4fHR4fHB8hHCAjHCEkHCInGyMpGyUsGyYvGigxGio1Gis4GS07
+        GS8+GDBCGDJFFzRIFzZLFzdPFjlSFjtVFTxYFT5bFUBeFEFhFEJjFENmE0VoE0ZqE0dsE0dtE0dtE0dt
+        E0dsE0ZqE0VoFENmFEJjFEFhFUBeFT5bFTxZFjtVFjlSFzdPFzZLFzRIGDJFGDBCGS8+GS07Gis4Gio1
+        GigxGyYvGyUsGyMpHCInHCEkHCAjHB8hHR4fHR4fHR0dHR0dHR0dHR0dHR0dHBwcHBwcAAAAAAAAHx8f
+        Hx8fHx8fICAgICAgICAgICAgICAgICAgICEiICEiICIjHyMlHyMmHyQnHyUpHiUqHiYsHicuHigwHSky
+        HSozHSs2HSw3HC06HC47HC89GzA/GzFBGzJDGzNFGjRHGjVIGjZKGjdLGjdMGThOGThPGTlPGTlPGTlP
+        GThPGThOGjdMGjdLGjZKGjVIGjRHGzNFGzJDGzFBGzA/HDA+HC47HC06HSw3HSs2HSozHSkyHigwHicu
+        HiYsHiUqHyUpHyQnHyMmHyMlICIjICEiICEiICAgICAgICAgICAgICAgHx8fHx8fHx8fAAAAAAAAISEh
+        ISEhISEhIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIjIiMkIiMkIiMkISQlISQlISQmISQnISUoISUo
+        ISUoISYpISYqIScrIScrICcsICcsICgtICgtICguICkvICkwICkwICkwICkwICoxICoxHyoyHyoyHyoy
+        ICoxICoxICkwICkwICkwICkwICkvICguICgtICgtICcsICcsIScrIScrISYqISYpISUoISUoISUoISQn
+        ISQmISQlISQlIiMkIiMkIiMkIiIjIiIiIiIiIiIiIiIiIiIiIiIiIiIiISEhISEhISEhAAAAAAAAJCQk
+        JCQkJCQkJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUl
+        JSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUl
+        JSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUl
+        JSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJCQkJCQkJCQkAAAAAAAAJycn
+        JycnJycnKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoJycnJycnJycnAAAAAAAAKSkp
+        KSkpKioqKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysr
+        KysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysr
+        KysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysr
+        KysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKioqKSkpKSkpAAAAAAAALCws
+        LCwsLS0tLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4u
+        Li4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4u
+        Li4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4u
+        Li4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLS0tLCwsLCwsAAAAAAAALi4u
+        Li4uLy8vMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
+        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
+        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
+        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwLy8vLi4uLi4uAAAAAAAAMTEx
+        MTExMjIyMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMz
+        MzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMz
+        MzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMz
+        MzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMjIyMTExMTExAAAAAAAAMzMz
+        MzMzNDQ0NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1
+        NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1
+        NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1
+        NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NTU1NDQ0MzMzMzMzAAAAAAAANjY2
+        NjY2Nzc3ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4
+        ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4
+        ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4
+        ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4Nzc3NjY2NjY2AAAAAAAAODg4
+        OTk5Ojo6Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7
+        Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7
+        Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7
+        Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ojo6OTk5ODg4AAAAAAAAOjo6
+        Ozs7PDw8PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
+        PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
+        PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
+        PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PDw8Ozs7Ojo6AAAAAAAAPj4+
+        QEBAQ0NDRERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
+        RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
+        RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
+        REREREREREREREREREREREREREREREREREREREREREREREREREREREREQ0NDQEBAPj4+AAAAAAAARkZG
+        SkpKTk5OT09PUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQ
+        UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQ
+        UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQ
+        UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQT09PTk5OSkpKRkZGAAAABwcHTk5O
+        UlJSVVVVV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dX
+        V1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dX
+        V1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dX
+        V1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXV1dXVVVVUlJSTk5OBwcHDw8PVlZW
+        WlpaXV1dX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19f
+        X19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19f
+        X19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19f
+        X19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fX19fXV1dWlpaVlZWDw8PFxcXHh4e
+        IyMjJSUlJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycn
+        JycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycn
+        JycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycn
+        JycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJSUlIyMjHh4eFxcX
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAgAwAABILAAASCwAAAAAAAAAA
